# openmr

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Cube3-I.cpp  Cube4-I.cpp  Cube5-I.cpp  Minicube-I-1.cpp  Minicube-II-1.cpp  Snake5-I.cpp  TODO.txt  Test-REPY-2.0.py  Test-plotting.cpp  Test-servocontroller-1.cpp  Test-servocontroller-1.py  Test-servocontroller-2.cpp  Test-servocontroller-2.py  Test-servocontroller-3.cpp  Test-servocontroller-4.cpp  Test-sinoscontroller-1.cpp  Test-sinoscontroller-1.py  Test-sinoscontroller-2.cpp  TestBase.cpp  TestBase.h  snake.cpp  test.cpp
examples/models/: Cube3-I.robot.xml  Cube3-hexa-I.robot.xml  Cube4-I.env.xml  Cube4-I.robot.xml  Cube4-hexa-I.robot.xml  Cube5-I.robot.xml  HeadP-flat.kinbody.xml  Minicube-I-hexa.env.xml  Minicube-I-hexa.robot.xml  Minicube-I.robot.xml  Minicube-II-hexa.env.xml  Minicube-II.env.xml  Minicube-II.robot.xml  PP.kinbody.xml  PY.body.xml  PY1.env.xml  Star3-middle.kinbody.xml  Tail.body.xml  Unimod1.env.xml  Y1-body.iv  Y1-test1.env.xml  Y1.kinbody.xml  YP.kinbody.xml  snake.robot.xml
models/: Cube3-I.env.xml  Cube3-hexa-I.env.xml  Cube4-hexa-I.env.xml  Cube5-I.env.xml  Cube5-II.robot.xml  Cube5-hexa-I.env.xml  Cube5-hexa-I.robot.xml  Cube7-II.robot.xml  Head.body.xml  HeadP-hexa.kinbody.xml  HeadP.kinbody.xml  HeadY.kinbody.xml  Minicube-I-flat.env.xml  Minicube-I-flat.robot.xml  Minicube-I.env.xml  Minicube-II-hexa.robot.xml  PP-flat.kinbody.xml  PP-hexa.kinbody.xml  PY.kinbody.xml  PY1.robot.xml  Star3.robot.xml  TailP-flat.kinbody.xml  TailP-hexa.kinbody.xml  TailP.kinbody.xml  Unimod.kinbody.xml  Unimod2.env.xml  Unimod3.env.xml  Unimod4.env.xml  Y1-head.iv  YP.body.xml  snake.env.xml  test.env.xml  test.robot.xml
models/REPY-2.0/: Body.stl  Head.stl  Kusanagi-2.env.xml  Kusanagi-2.robot.xml  Kusanagi-3.env.xml  Kusanagi-3.robot.xml  Kusanagi-8.env.xml  Kusanagi-8.robot.xml  REPY-2.0.env.xml  REPY-2.0.kinbody.xml  REPY-2.0.robot.xml  snakegen.py
plugin/: CMakeLists.txt  openMR.cpp  openMR.h  openmr.cpp  openmrmain.cpp  plugindefs.h  servocontroller.h  sinoscontroller.h  testplugin.py  testplugin2.py  testplugin3.py  testplugin4-sinos.py
